# kaleidoscope-tools

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: ai-research.md  analytical-critic.md  arbiter.md  pragmatic-critic.md  risk-critic.md
.claude/hooks/: context-sentinel-session-start.sh
.windsurf/workflows/: git-commit-generate.md  level-analysis.md
agents/: ai-engineer.md  analytical-critic.md  arbiter.md  learnings-observer.md
agents/ai-research/: SOUL.md
agents/devops-expert/: SOUL.md
changes/2026-04-15_continuous-learning/: 1-kickoff.md  2-plan.md  acceptance.yaml  index.yaml  issues.md  overview.md  problem-autopsy.md
docs/: deliberative_consensus_workflow.md  embedding_free_rag.md  human-ai-dev-workflow-build-spec-v1.md  human-ai-dev-workflow-complete.md  human-ai-dev-workflow-questions-template-v1.0.md  human-ai-dev-workflow-supplement-v1.1.md
hooks/: check-learnings.sh  context-sentinel-session-start.sh  hooks.json  observe-learnings.sh
quota-guard/: config.yaml
reference_opensource/: OpenSpec  everything-claude-code  get-shit-done  gstack  superpowers  update_refer_opensource.sh
skills/browser-qa/: SKILL.md  pyproject.toml
skills/browser-qa/src/browser_qa/: __init__.py  auth_detector.py  snapshot_processor.py  url_validator.py
skills/browser-qa/tests/: auth_detector_test.py  conftest.py  snapshot_processor_test.py  url_validator_test.py
template/: Template-DAILY-INTEL.md  Template-HEARTBEAT.md  Template-MEMORY.md
(+93 files in other folders)
