[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-qa"
version = "0.1.0"
description = "Python helpers for Browser QA skill — snapshot processing, auth detection, URL validation"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
snapshot-processor = "browser_qa.snapshot_processor:main"
auth-detector = "browser_qa.auth_detector:main"
url-validator = "browser_qa.url_validator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
